# Cpp-Project-Template

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake-build.ps1
.github/workflows/: build-test.yaml
cmake/: hello.cmake
include/foo/: foo.h
src/: CMakeLists.txt  main.cpp
src/foo/: CMakeLists.txt  foo.cpp  private_foo.cpp  private_foo.h  private_foo_test.cpp
tests/: CMakeLists.txt  foo_test.cpp
